rn - adiciona requisitos 1 e 2

--- a/index.html
+++ b/index.html
@@ -4,19 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Trybewarts</title>
 </head>
 <body>
     <header>
         <!-- <div class header></div> requisito 1  -->
-        <!-- <img src="" alt=""> requisito 2 -->
-        <!-- <h1></h1> requisito 4 -->
-        <!-- <label for=""> requisito 3
+        <div class="header">
+            <!-- <img src="" alt=""> requisito 2 -->
+            <img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg">
+            <!-- <h1></h1> requisito 4 -->
+
+            <!-- <label for=""> requisito 3
             <input type="text">
-        </label>
-        <label for="">
+            </label>
+            <label for="">
             <input type="text">
-        </label> -->
+            </label> -->
+            <form class="trybewarts-login">
+                <input type="email" name="email" id="" placeholder="Email">
+                <input type="password" name="password" id="" placeholder="Senha">
+                <button type="submit">Entrar</button>
+            </form>
+        </div>
     </header>
     <main>
         <!-- <div class="form"> requisito 6 -->
