--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             <input type="text">
             </label> -->
             <form class="trybewarts-login">
-                <input type="email" name="email" id="" placeholder="Email">
-                <input type="password" name="password" id="" placeholder="Senha">
-                <button type="submit">Entrar</button>
+                <input type="email" name="email" id="login-email" placeholder="Email">
+                <input type="password" name="password" id="login-password" placeholder="Senha">
+                <button type="submit" id="login-button">Entrar</button>
             </form>
         </div>
     </header>
@@ -86,5 +86,6 @@
         <!-- </div> -->
     </main>
     <!-- <footer></footer> requisito 19 -->
+    <script src="script.js"></script>
 </body>
 </html>
