--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <!-- <img src="" alt=""> requisito 2 -->
             <img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg">
             <!-- <h1></h1> requisito 4 -->
-
+            <h1 id="trybewarts-header-title">Trybewarts</h1>
             <!-- <label for=""> requisito 3
             <input type="text">
             </label>
@@ -30,6 +30,7 @@
     </header>
     <main>
         <!-- <div class="form"> requisito 6 -->
+        <form id="evaluation-form">
             <!-- <img src="" alt=""> requisito 7-->
             <!-- <label for=""> requisito 8
                 <input type="text">
@@ -84,8 +85,12 @@
             </label> -->
             <!-- <button type="submit"></button>  requisito 17 -->
         <!-- </div> -->
+        </form>
     </main>
     <!-- <footer></footer> requisito 19 -->
+    <footer>
+        <p>Direitos reservados à Trybewarts©</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
