--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <label for="email-and-houses">
                 <input type="email" class="email-and-houses"id="input-email" placeholder="Email">
                 <select name="Houses" id="house">
-                    <option value="Gitnoria" id="gitnoria-house">Gitnoria</option>
+                    <option value="Gitnoria" id="gitnoria-house">Gitnória</option>
                     <option value="Reactpuff" id="reactpuff-house">Reactpuff</option>
                     <option value="Corvinode" id="corvinode-house">Corvinode</option>
                     <option value="Pytherina" id="pytherina-house">Pytherina</option>
