tentando resolver erro de pull

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                 <input type="checkbox" name="" id="">
             </label> -->
             <!-- <button type="submit"></button>  requisito 17 -->
+            <button type="submit" id="submit-btn">Enviar</button>
         <!-- </div> -->
         </form>
     </main>
